WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287049
[libpas] Land PGM stack trace collection
https://bugs.webkit.org/show_bug.cgi?id=287049
Summary
[libpas] Land PGM stack trace collection
zak ridouh
Reported
2025-02-04 16:22:56 PST
Tracking bug to land the PGM stack trace collection patch on PGM allocations and deallocations on main, since it came back perf neutral after running A/B tests on it.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-04 16:23:06 PST
<
rdar://problem/144197730
>
zak ridouh
Comment 2
2025-02-04 16:45:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40014
zak ridouh
Comment 3
2025-04-23 17:24:45 PDT
<
rdar://106166552
>
EWS
Comment 4
2025-04-23 20:32:56 PDT
Committed
294039@main
(21f7771c163d): <
https://commits.webkit.org/294039@main
> Reviewed commits have been landed. Closing PR #40014 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug